fixed spacing between cells

--- a/HTML-Challenge/style.css
+++ b/HTML-Challenge/style.css
@@ -12,7 +12,8 @@ body {
 /* PRODUCT */
 .product {
   display: grid;
-  grid-template-columns: 250px 280px 280px;
+  grid-template-columns: 250px 1fr 1fr;
+  column-gap: 20px;
   border: 4px solid black;
   width: 825px;
   margin: 50px auto;
